<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/ tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/options"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/how_to_play"
        android:title="@string/instructions"
        android:icon="@drawable/ic_question"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText"/>
    <item android:title="@string/points_label"
        android:id="@+id/totalpoints"
        android:icon="@drawable/ic_dnapoints"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText"/>
    <item android:title="@string/about_label"
        android:id="@+id/acercade"
        android:icon="@drawable/ic_frog_logo5"
        android:orderInCategory="4"
        app:showAsAction="ifRoom|withText"/>
    <!--item android:title="@string/about_label"
        android:id="@+id/connect"
        android:icon="@drawable/ic_frog_logo3"
        android:orderInCategory="5"
        app:showAsAction="never"/-->
</menu>