<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/colorIndividualCard"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@color/colorIndividualCard"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_points_bastard"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_pond3" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text_points_bastard"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPoints"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/points_from_bastard"></TextView>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text_points_bastard_num"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPoints"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="10"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@color/colorIndividualCard"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_points_punnet"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_punnet3" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text_points_punnet"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPoints"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/points_from_punnet"></TextView>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text_points_punnet_num"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="100"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@color/colorIndividualCard"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_points_total"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_dnapoints" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text_points_total"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPoints"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:text="@string/points_total"></TextView>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text_points_total_num"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="100"></TextView>
    </LinearLayout>
</LinearLayout>